--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "aws-greengrass-core-sdk",
+  "name": "greengrass-core-sdk",
   "version": "1.6.1",
+  "description": "",
   "main": "index.js",
   "dependencies": {
     "cbor": "5.0.1"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mstfldmr/greengrass-core-sdk.git"
+  },
+  "keywords": [
+    "aws",
+    "greengrass",
+    "iot"
+  ],
   "license": "Apache-2.0",
   "author": {
     "name": "Amazon Web Services",
     "url": "https://aws.amazon.com"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/aws/aws-greengrass-core-sdk-js"
-  }
+  "bugs": {
+    "url": "https://github.com/mstfldmr/greengrass-core-sdk/issues"
+  },
+  "homepage": "https://github.com/mstfldmr/greengrass-core-sdk#readme"
 }
